--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "start": "pm2 start ecosystem.config.json --no-daemon",
     "dev": "cross-env NODE_ENV=development nodemon src/server.js",
-    "test": "jest -i --colors --verbose --detectOpenHandles & jest -i --coverage --forceExit",
+    "test": "jest -i --colors --verbose --detectOpenHandles --forceExit",
     "test:watch": "jest -i --watchAll",
-    "coverage": "jest -i --coverage",
+    "coverage": "jest -i --coverage --forceExit",
     "coverage:coveralls": "jest -i --coverage --coverageReporters=text-lcov | coveralls",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
