--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "dev": "cross-env NODE_ENV=development nodemon src/server.js",
     "test": "jest -i --colors --verbose --detectOpenHandles --forceExit",
     "test:watch": "jest -i --watchAll",
-    "coverage": "jest -i --coverage --forceExit",
-    "coverage:coveralls": "jest -i --coverage --coverageReporters=text-lcov | coveralls --forceExit",
+    "coverage": "jest -i  --detectOpenHandles --coverage --forceExit",
+    "coverage:coveralls": "jest -i --detectOpenHandles --coverage --coverageReporters=text-lcov | coveralls --forceExit",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check **/*.js",
