--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,7 @@
 name: Deploy to AWS
-  uses:ShauryaAg/AWS-Deploy-action@v1
-  with:
-    # Flag to get the env variables or not. Set `false` if ENV secrets should not be fetched
-    get-env: # optional, default is true
-    # Bucket where the ENV Secrets are stored
-    env-bucket: # optional
-    # AWS App Name
-    aws-app-name: # optional
-    # Bucket where the deployment is stored
-    app-bucket: # optional
-    # AWS App Group
-    app-group: # optional
+  jobs:
+    my_first_job:
+      steps:
+        - name: Deploy to AWS
+          # Uses the default branch of a public repository
+          uses: ShauryaAg/AWS-Deploy-action@v1
